2015-11-07
	* add gnu automake files