@@ -3,24 +3,22 @@
 
 #include <iostream>
 #include <sstream>
+#include "rand.h"
 
 using namespace std;
 
 class Pass {
 public:
-	Pass(int len, int alpha = 0, int Alpha = 0, int number = 0, int symbol = 0);
-	~Pass(void);
-	void print(void);
+	Pass(int len, int alpha = 0, int Alpha = 0, int number = 0, int symbol = 0, unsigned long randType = Rand::RAND_TYPE_PSEUDO_RANDOM);
 	friend ostream &operator<<(ostream &out, const Pass &p);
 private:
-	unsigned long getRand(void);
 	void generate(void);
 	int _alpha;
 	int _Alpha;
 	int _number;
 	int _symbol;
 	int _len;
-	int _fd;
+	unsigned long _randType;
 	string _pass;
 };
 
