@@ -3,13 +3,13 @@
 
 #include <iostream>
 #include <sstream>
+#include "rand.h"
 
 using namespace std;
 
 class RandCharacter {
 public:
-	RandCharacter(unsigned long type, int len);
-	~RandCharacter(void);
+	RandCharacter(unsigned long charType, int len, unsigned long randType = Rand::RAND_TYPE_PSEUDO_RANDOM);
 	void generate(void);
 	friend ostream &operator<<(ostream &out, const RandCharacter &c);
 
@@ -17,15 +17,15 @@ public:
 	static const unsigned long CHARACTER_UPPER_CASE = 0x02;
 	static const unsigned long CHARACTER_DIGIT = 0x04;
 	static const unsigned long CHARACTER_SYMBOL = 0x08;
+
 private:
-	bool charValid(int ch);
-	unsigned long getRand(void);
-	int _fd;
-	char *_chs;
-	int _lchs;	
-	char *_p;
-	char _type;
+	bool charValid(unsigned char ch);
+	string _validChars;
+	string _randChars;
+	unsigned long _charType;
 	char _len;
+	unsigned long _randType;
+	
 };
 
 #endif
