@@ -1,2 +1,4 @@
+2015-11-08
+	* add Rand class for rand number
 2015-11-07
 	* add gnu automake files
